Avoid FOIT & Make primary red darker to satisfy AA contrast

--- a/theme/theme-settings.css
+++ b/theme/theme-settings.css
@@ -1,6 +1,5 @@
 :root {
-    --primary-color: #ff4545;
-    --logo-fill: #e21207;
+    --primary-color: #e21207;
     --content-width: 640px;
     --tag-badge-color: #ffe633;
     --content-bg-color: #fff;
